--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,10 @@
+block mixins
+    include ../views/core/mixins
+block variable 
+    - title = ''
+    - pageClass = ''
+    - mainClass = ''
+
 doctype html
 html(lang="en")
     head
@@ -34,6 +41,16 @@ html(lang="en")
 
         script(src='/js/library/jquery/jquery-min.js')
 
-    title Vũ Thảo - Index
+    title=title
     body    
-        include ../views/includes/header
+    section.section-page(class=pageClass)
+        block header
+            include ../views/component/header
+
+        main.main(class=mainClass)
+            block container
+
+        block footer
+            include ../views/component/footer
+
+        script(src="/js/main.js" type="module")
