--- a/views/component/header.pug
+++ b/views/component/header.pug
@@ -1,1 +1,37 @@
 header.header
+    .container
+        .header-box 
+            .header-column
+                .header-logo 
+                    a(href="#") 
+                        img(srcset="/assets/img/logo/logo-vuthao.svg" alt="")
+            .header-column
+                nav.header-menu.mobile
+                    .header-navigation
+                        ul.menu 
+                            li.menu-item
+                                a(href="#") Trang chủ
+                            li.menu-item.menu-dropdown
+                                a(href="#") Giới thiệu
+                                i.ic.ic-down
+                            li.menu-item.menu-dropdown
+                                a(href="#") Sản phẩm
+                                i.ic.ic-down
+                            li.menu-item.menu-dropdown
+                                a(href="#") Tin tức chuyển đổi số
+                                i.ic.ic-down
+                            li.menu-item
+                                a(href="#") Tuyển dụng
+                    .header-contact
+                        .header-box 
+                            .header-box-search
+                                .search 
+                                    i.ic.ic-search
+                            .header-box-phone 
+                                .phone 
+                                    i.ic.ic-phone 
+                            .header-box-language 
+                                .language
+                                    img(src="/dist/assets/img/icon/language-eng.webp" loading="lazy")
+                            .header-box-button 
+                                a.btn.btn-contact(href="#") Liên hệ
