--- a/views/index.pug
+++ b/views/index.pug
@@ -35,8 +35,11 @@ html(lang="en")
         meta(property='og:locale' content='vi_VN')
         meta(property='fb:pages' content='')
         meta(http-equiv='x-dns-prefetch-control' content='on')
+        //- Link icon
+        link(rel="stylesheet" href="/assets/icon/iconfont/style.css")
+        //- Link Favicon
         link(rel="shorcut icon" href="/assets/img/favicon/favicon.ico")
-
+        //- Link CSS
         link(rel='stylesheet' href='/dist/css/style.css')
 
         script(src='/js/library/jquery/jquery-min.js')
