--- a/views/component/header.pug
+++ b/views/component/header.pug
@@ -1,6 +1,6 @@
 header.header
     .container
-        .header-box 
+        .header-wrap 
             .header-column
                 .header-logo 
                     a(href="#") 
@@ -11,27 +11,27 @@ header.header
                         ul.menu 
                             li.menu-item
                                 a(href="#") Trang chủ
-                            li.menu-item.menu-dropdown
+                            li.menu-item.dropdown
                                 a(href="#") Giới thiệu
                                 i.ic.ic-down
-                            li.menu-item.menu-dropdown
+                            li.menu-item.dropdown
                                 a(href="#") Sản phẩm
                                 i.ic.ic-down
-                            li.menu-item.menu-dropdown
+                            li.menu-item.dropdown
                                 a(href="#") Tin tức chuyển đổi số
                                 i.ic.ic-down
                             li.menu-item
                                 a(href="#") Tuyển dụng
                     .header-contact
-                        .header-box 
-                            .header-box-search
+                        .header-block 
+                            .header-block-search
                                 .search 
                                     i.ic.ic-search
-                            .header-box-phone 
+                            .header-block-phone 
                                 .phone 
                                     i.ic.ic-phone 
-                            .header-box-language 
+                            .header-block-language 
                                 .language
                                     img(src="/dist/assets/img/icon/language-eng.webp" loading="lazy")
-                            .header-box-button 
+                            .header-block-button 
                                 a.btn.btn-contact(href="#") Liên hệ
