--- a/scss/component/_header.scss
+++ b/scss/component/_header.scss
@@ -4,10 +4,10 @@
   width: 100%;
   height: 7rem;
   z-index: 10;
-  position: fixed;
+  position: sticky;
   background: white;
   box-shadow: 0 0.2rem 0.9rem rgba(0, 0, 0, 0.14221);
-  &-box {
+  &-wrap {
     height: 100%;
     @include flex-btw;
   }
@@ -25,27 +25,63 @@
       @include flex-al;
       &-item {
         @include flex;
+        @include min(1201px) {
+          &:hover {
+            > a {
+              color: $blue-dark;
+            }
+            .ic-down {
+              transform: rotate(180deg);
+              &::before {
+                color: $blue-dark;
+              }
+            }
+          }
+        }
         a {
           color: $brown;
+          transition: all 0.4s;
         }
         .ic-down {
+          transition: all 0.4s;
           &::before {
             color: $brown;
             font-size: 0.6rem;
           }
         }
       }
-      &-dropdown {
+      .dropdown {
         gap: 0.4rem;
       }
     }
   }
-  &-box {
+  &-block {
     gap: 3rem;
-    @include flex;
+    @include flex-al;
+    > div {
+      cursor: pointer;
+      &:not(:last-child) {
+        > div {
+          display: block;
+          padding: 0.8rem;
+          margin: -0.8rem;
+          position: relative;
+          border-radius: 50%;
+          transition: 0.4s ease-in-out;
+          width: calc(100% + 1.6rem);
+          @include min(1201px) {
+            &:hover {
+              background: rgba(0, 0, 0, 0.05);
+              &.phone {
+                animation: ring 1.5s infinite ease-in-out;
+              }
+            }
+          }
+        }
+      }
+    }
     .ic {
       display: block;
-      cursor: pointer;
       &::before {
         font-size: 1.8rem;
         color: $blue-blur;
@@ -55,16 +91,7 @@
       img {
         width: 2.3rem;
         height: 1.5rem;
-        cursor: pointer;
       }
-    }
-    .btn {
-      display: block;
-      line-height: 1.15;
-      background: white;
-      padding: 0.9rem 3.1rem;
-      border-radius: 0.5rem;
-      border: 0.1rem solid $blue-dark;
     }
   }
 }
