--- a/views/layout/trang-chu.pug
+++ b/views/layout/trang-chu.pug
@@ -7,3 +7,4 @@ block variable
 block container 
     section.banner
         .container
+            span Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet nihil qui nesciunt temporibus voluptates sequi in ipsa quidem, voluptas ratione vitae quod, numquam eius. Harum vitae id veniam dolor laborum?
